# clicky-win

./: .gitignore  Clicky_intro_video.txt  README.md
clicky-py/: README.md  clicky.spec  config.example.toml  pyproject.toml
clicky-py/clicky/: __main__.py  app.py  companion_manager.py  config.py  design_system.py  hotkey.py  icon_factory.py  knowledge_base.py  logging_config.py  mic_capture.py  point_mapper.py  prompts.py  screen_capture.py
clicky-py/clicky/clients/: llm_client.py  transcription_client.py
clicky-py/clicky/ui/: companion_widget.py  history_window.py  model_picker.py  panel.py  permissions_indicator.py  response_view.py  status_banner.py  transcript_view.py  tray_icon.py  waveform_view.py
clicky-py/tests/: test_companion_position.py  test_config.py  test_conversation_history.py  test_knowledge_base.py  test_llm_sse_parser.py  test_point_mapper.py  test_point_parser.py  test_screen_capture_labels.py  test_transcription_parser.py  test_waveform_bars.py
docs/: PRD-v2-cursor-companion.md  PRD-v2.1-cursor-guidance.md  PRD-v3-knowledge-base.md  PRD.md
docs/superpowers/plans/: 2026-04-09-clickywin-v1.md  2026-04-11-clickywin-v2-companion.md  2026-04-12-clickywin-v2.1-cursor-guidance.md  2026-04-12-clickywin-v3-knowledge-base.md
worker/: wrangler.toml
