[project]
name = "clicky"
version = "0.1.0"
description = "ClickyWin — voice tutor for Windows learners. Python port of Farza's Clicky."
requires-python = ">=3.12,<3.13"
dependencies = [
    "pyside6>=6.7",
    "sounddevice>=0.4.6",
    "mss>=9.0",
    "pynput>=1.7.6",
    "httpx>=0.27",
    "websockets>=12.0",
    "pillow>=10.0",
    "platformdirs>=4.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
    "pyinstaller>=6.0",
]

[project.scripts]
clicky = "clicky.__main__:main"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["clicky"]
